Artist page hero video fix on ios

--- a/src/scss/components/_artist-page.scss
+++ b/src/scss/components/_artist-page.scss
@@ -94,6 +94,7 @@
     &:fullscreen {
       opacity: 1;
       visibility: visible;
+      z-index: 10000000;
     }
     [data-plyr="play"] {
       display: none;
@@ -134,6 +135,13 @@
     width: 100%;
     height: 58px;
     z-index: 2;
+  }
+  .plyr--fullscreen-fallback {
+    opacity: 1 !important;
+    visibility: visible !important;
+    z-index: 10000000 !important;
+    height: 100vh;
+    position: fixed;
   }
   @media (min-width: 768px) {
     padding-bottom: 70px;
