--- a/src/scss/components/_video-player.scss
+++ b/src/scss/components/_video-player.scss
@@ -245,6 +245,7 @@
     }
   }
   .video-list {
+    grid-auto-rows: max-content;
     padding-bottom: 0;
     position: fixed;
     bottom: 0;
