--- a/src/scss/helpers/_scaffolding.scss
+++ b/src/scss/helpers/_scaffolding.scss
@@ -81,3 +81,10 @@ section {
     padding: 0 20px;
   }
 }
+
+a {
+  &:active,
+  &:hover {
+    color: inherit;
+  }
+}
